paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/add_op_c9/sample_001/target.compile.log
error[E0277]: `main` has invalid return type `i32`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/add_op_c9/sample_001/target.rs:1:14
  |
1 | fn main() -> i32 {
  |              ^^^ `main` can only return types that implement `Termination`
  |
  = help: consider using `()`, or a `Result`

warning: unused variable: `a`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/add_op_c9/sample_001/target.rs:2:9
  |
2 |     let a: [i32; 4] = [10, 20, 30, 40];
  |         ^ help: if this is intentional, prefix it with an underscore: `_a`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.